--- a/client/styles/components/add-playlist-menu.scss
+++ b/client/styles/components/add-playlist-menu.scss
@@ -16,10 +16,6 @@
     max-height: 360px;
     overflow: auto;
 
-    .hidden {
-        display: none;
-    }
-
     mdl-list-item:hover {
         background-color: #eaeaea;
     }
